separation of three models